@@ -72,7 +72,7 @@
                     <parallel>classes</parallel>
                     <forkMode>perthread</forkMode>
                     <threadCount>2</threadCount>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <argLine>Xmx512m </argLine>
                     <includes>
                         <include>**/*Runner.java</include>
                     </includes>
